// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion - Snapshot should render a proper expanded state 1`] = `
<View
  style={Object {}}
  testID="accordion"
>
  <AccordionHeader
    isExpanded={true}
    onPress={[Function]}
    title="Sample Accordion Header Title"
  />
  <View
    testID="accordion-content"
  >
    <View />
  </View>
</View>
`;

exports[`Accordion - Snapshot should render default settings correctly 1`] = `
<View
  style={Object {}}
  testID="accordion"
>
  <AccordionHeader
    isExpanded={false}
    onPress={[Function]}
    title="Sample Accordion Header Title"
  />
</View>
`;
